# starlink-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  dish.rs  helpers.rs  main.rs
