[package]
name = "starlink-dash"
version = "0.1.0"
authors = ["Luke Richey <lukebrichey@gmail.com>"]
edition = "2021"

[dependencies]
structopt = "0.3"
termion = "1.5"
starlink = { git = "https://github.com/ewilken/starlink-rs.git" }
tonic = "0.8"
tokio = { version = "1.5", features = ["rt-multi-thread"] }  # tokio moved here
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.8"
